# crab-tool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DirNavigatorWidget.cpp  DirNavigatorWidget.h  ImageDirOnlyProxy.cpp  ImageDirOnlyProxy.h  ImageItemDelegate.h  ImageItemDelegte.cpp  ImageListModel.h  ImageNavigatorWidget.cpp  ImageNavigatorWidget.h  ImageZoomWidget.cpp  ImageZoomWidget.h  MainImageWidget.cpp  MainWindow.cpp  MainWindow.h  README.md  SelectionRect.cpp  ToolboxButton.cpp  ToolboxButton.h  ToolboxButtonWidget.h  ToolboxWidget.cpp  ToolboxWidget.h  build-linux.sh  build-win.ps1  build_linux.sh  file_manager_dir_widget.cpp  file_manager_dir_widget.h  file_manager_widget.cpp  file_manager_widget.h  image_button_widget.cpp  image_button_widget.h  image_widget.cpp  image_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  navigator_directory_widget.h  navigator_widget.cpp  (+8 more)
core/: Checksum.cpp  Checksum.h  Constants.h  ExportBase.cpp  ExportBase.h  ExportHaar.cpp  ExportHaar.h  ExportYolo.cpp  ExportYolo.h  FileDialog.cpp  FileDialog.h  FlowLayout.cpp  FlowLayout.h  ImageData.cpp  ImageData.h  ImageDirOnlyProxy.cpp  ImageFilterProxy.cpp  ImageFilterProxy.h  ImageItemDelegate.cpp  ImageItemDelegte.cpp  ImageListModel.cpp  PositionTarget.cpp  PositionTarget.h  ProjectData.cpp  ProjectData.h  SelectionRect.cpp  SelectionRect.h
widgets/: ComboBoxOrdered.cpp  ComboBoxOrdered.h  DirNavigatorWidget.cpp  DirNavigatorWidget.h  ImageNavigatorWidget.cpp  ImageNavigatorWidget.h  ImageZoomWidget.cpp  ImageZoomWidget.h  InfoPopup.cpp  InfoPopup.h  MainImageWidget.cpp  MainImageWidget.h  MultiValueWidget.cpp  MultiValueWidget.h  ParametersTable.cpp  ParametersTable.h  PointEditWidget.cpp  PointEditWidget.h  SelectionPopup.cpp  SelectionPopup.h  ToolboxButtonWidget.cpp  ToolboxWidget.cpp  ToolboxWidget.h
